--- a/template.html
+++ b/template.html
@@ -13,21 +13,19 @@
       * {
         box-sizing: border-box;
       }
+
       html {
-        background: #ffffff;
+        background: #f0f2f5;
       }
 
       body {
-        background: rgba(248, 249, 250, 1);
-        background: green;
+        background: #ffffff;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         border-radius: 7px;
         font-family: Inter;
         width: 90%;
         max-width: 700px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin: 20px auto;
         padding: 25px;
         padding-top: 10px;
       }
@@ -43,25 +41,40 @@
 
       .value {
         border-radius: 5px;
-        border: 1px solid #f0f2f5;
         padding: 7px;
         margin: 0;
         background: #e9ecf5;
+        box-shadow: inset rgba(0, 0, 0, 0.11) 0 0 0 1px;
       }
 
       .action-container {
         margin-top: 25px;
       }
 
-      button {
+      .button {
         width: 100%;
-        padding: 8px 16px;
+        display: inline-block;
+        text-align: center;
+        padding: 10px 16px;
         border-radius: 5px;
         outline: none;
         border: none;
-        background: #5f7dfc;
+        background: #0466c8;
         color: #ffffff;
         font-weight: bold;
+        transform: scale(1);
+        box-shadow: inset rgba(0, 0, 0, 0.11) 0 0 0 1px;
+        font-size: 1em;
+        user-select: none;
+        text-decoration: none;
+      }
+
+      .button:hover {
+        background: #0353a4;
+      }
+
+      .button:active {
+        transform: scale(0.99);
       }
     </style>
   </head>
@@ -75,6 +88,12 @@
     <p class="value">{{.Subject}}</p>
     <p class="key">Message:</p>
     <p class="value">{{.Message}}</p>
-    <div class="action-container"><button>Contact</button></div>
+    <div class="action-container">
+      <a
+        class="button"
+        href="mailto:{{.Email}}?subject=Reply to: {{.Subject}}&body=Answering to:%0d%0aSubject: {{.Subject}}%0d%0aMessage: {{.Message}}%0d%0a%0d%0a------%0d%0a%0d%0a%0d%0a"
+        >Contact</a
+      >
+    </div>
   </body>
 </html>
